--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="#experience">About</a>
       <a href="#portfolio">Projects</a>
       <a href="#skills">Skills</a>
-      <a href="contact.html">Contact</a>
+      <a href="contact.php">Contact</a>
     </nav>
   </div>
 </header>
