--- a/project1.html
+++ b/project1.html
@@ -12,34 +12,36 @@
       <div class="logo">S</div>
       <div class="hamburger" onclick="toggleMenu()">☰</div>
       <nav class="nav-links" id="mobileMenu">
-        <a href="index.html#Home">HOME</a>
-        <a href="index.htmlt#about">About</a>
-        <a href="index.html#projects">Projects</a>
-        <a href="index.html#skills">Skills</a>
-        <a href="index.html#contact">Contact</a>
+        <a href="index.html#home">HOME</a>
+        <a href="index.html#about">ABOUT</a>
+        <a href="index.html#projects">PROJECTS</a>
+        <a href="index.html#skills">SKILLS</a>
+        <a href="index.html#contact">CONTACT</a>
       </nav>
     </div>
   </header>
 
-  <div class="project1">
-    <div class="background-container">
-   <section class="project-page">
-     <div class="project-content">
-      <h1>E-Commerce Website</h1>
-    <div class="project-details">
-     <h2>Project Details</h2>
-      <p>A fully responsive e-commerce website with product listings, shopping cart functionality, and secure checkout process.</p>
-       <ul>
-      <li><strong>Frontend:</strong> HTML5, CSS3, JavaScript</li>
-      <li><strong>Features:</strong> Product filtering, user authentication, payment integration</li>
-         </ul>
-        <p>This project helped me understand complex state management and API integrations in web development.</p>
+  <main>
+    <div class="project1">
+      <div class="background-container">
+        <section class="project-page">
+          <div class="project-content">
+            <h1>E-Commerce Website</h1>
+            <div class="project-details">
+              <h2>Project Details</h2>
+              <p>A fully responsive e-commerce website with product listings, shopping cart functionality, and secure checkout process.</p>
+              <ul>
+                <li><strong>Frontend:</strong> HTML5, CSS3, JavaScript</li>
+                <li><strong>Features:</strong> Product filtering, user authentication, payment integration</li>
+              </ul>
+              <p>This project helped me understand complex state management and API integrations in web development.</p>
+            </div>
+            <a href="index.html" class="button">Back to Portfolio</a>
+          </div>
+        </section>
       </div>
-      <a href="index.html" class="button">Back to Portfolio</a>
     </div>
-    </section>
-    </div>
-  </div>
+  </main>
 
   <footer class="footer-container">
     <p><span class="logo">S</span> © 2025 by Sheikh Faraz</p>
