--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <div> <a href="index.html" class="logo">S</a> </div>
       <div class="hamburger" onclick="toggleMenu()">☰</div>
       <nav class="nav-links" id="mobileMenu">
-        <a href="#Home">Home</a>
-        <a href="#portfolio">Projects</a>
-        <a href="#skills">Skills</a>
-        <a href="contact.html">Contact</a>
-        <a href="#about">About</a> 
+        <a href="#Home">HOME</a>
+        <a href="#portfolio">PROJECTS</a>
+        <a href="#skills">SKILLS</a>
+        <a href="contact.html">CONTACT</a>
+        <a href="#about">ABOUT</a> 
       </nav>
     </div>
   </header>
@@ -41,7 +41,6 @@
   </div>
   
   <section id="portfolio" class="section3">
-    <h1>02 PORTFOLIO</h1>
     <p>MY LATEST WORK. SEE MORE</p>
     <div class="project-container">
       <a href="project1.html" class="box box1"><p>Project 01</p></a>
