--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="hero-content">
         <h1 class="greeting">HELLO</h1>
         <h1 class="name">I'M Sheikh Faraz</h1>
-        <p class="tagline">I am learning web development.</p>
+        <p class="tagline">Discovering Beauty, Creating Change</p>
       </div>
       <div class="hero-image"></div>
     </div>
@@ -34,7 +34,6 @@
 
   <div class="container">
     <div class="overlap-box">
-      <p>I'M Sheikh Faraz i am learning web development.</p>
       <h2>Download My Resume</h2>
       <a href="Sheikh_Faraz_CV.pdf" download class="button">Download Resume</a>
     </div>
